name:                servant-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       servant,
                       time,
                       aeson, text
                       , servant-server, warp, wai, bytestring
  default-language:    Haskell2010

executable servant-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-example
                                            , servant,
                       time,
                       aeson, text
                       , servant-server, warp, wai, mtl, servant-auth
                       , servant-auth-server, servant-docs, bytestring
  default-language:    Haskell2010

test-suite servant-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-example
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-example
